# elara-runtime

./: .gitignore  Cargo.toml  README.md  pyproject.toml
benches/: bench_crypto.rs  bench_dag.rs  bench_wire.rs
python/elara_runtime/: __init__.py
src/: addressing.rs  dag.rs  errors.rs  identity.rs  lib.rs  operations.rs  record.rs  uuid7.rs  wire.rs
src/crypto/: batch.rs  hash.rs  mod.rs  pqc.rs
src/storage/: mmap_index.rs  mod.rs  sqlite.rs  tiled.rs
tests/: test_compat.py  test_wire_interop.py
